--- a/src/index.css
+++ b/src/index.css
@@ -68,5 +68,52 @@ justify-content: space-between;
 
 }
 .bold {
-  font-weight: 600;
+  font-weight: 650;
+}
+.app .input {
+  text-align: center;
+  max-width: 700px;
+  height: 80px;
+  margin: auto;
+  padding: 0 1rem;
+  position: relative;
+  display: flex;
+}
+.app input {
+  margin-top: 1rem;
+  padding: 0.7rem 1.5rem;
+  font-size: 1.2rem;
+  border-radius: 25px;
+  border: 2px solid black;
+  background: #ffffff24;
+
+}
+.app button {
+  height: 40px;
+  margin: 1.5rem 0.5rem;
+  font-size: 1.2rem;
+  font-weight: 550;
+  color: #374346f6; 
+  border: 2px solid #ffffff6d;
+  background-color:rgb(222, 219, 219);
+  border-radius: 8px;
+  cursor: pointer;
+}
+.app button:hover{
+  background-color:white;
+}
+.app button:active{
+  animation-name: buttonClick;
+  animation-duration: 0.3s;
+}
+@keyframes buttonClick {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
